# mattori-home

./: .gitignore  Cargo.toml  build.rs
.devcontainer/: devcontainer.json
mattori-home-cli/: Cargo.toml
mattori-home-cli/src/: conversions.rs  main.rs  server.rs
mattori-home-discord/: Cargo.toml
mattori-home-discord/src/: commands.rs  main.rs
mattori-home-discord/src/commands/: atmosphere.rs
mattori-home-peripherals/: Cargo.toml
mattori-home-peripherals/src/: atmosphere.rs  lcd.rs  led.rs  lib.rs
mattori-home-peripherals/src/atmosphere/: calibration.rs  commands.rs  types.rs
mattori-home-peripherals/src/ir/: format.rs  input.rs  output.rs  sanyo.rs  types.rs
mattori-home-peripherals/src/ir/format/: aeha.rs
mattori-home-peripherals/src/ir/sanyo/: types.rs
mattori-home-ui/: Cargo.toml  build.rs  build_web.sh
mattori-home-ui/docs/: index.html  manifest.json  mattori_home_ui.js  mattori_home_ui_bg.wasm  sw.js
mattori-home-ui/src/: app.rs  client.rs  lib.rs  main.rs
mattori-home-web-front/: Cargo.toml  index.html
mattori-home-web-front/src/: main.rs  pages.rs  types.rs
mattori-home-web-front/src/pages/: ac_control.rs  ac_graph.rs
proto/: mattori_home.proto
src/: atmosphere.rs  ir.rs  lcd.rs  led.rs  main.rs
src/atmosphere/: calibration.rs  commands.rs  types.rs
src/ir/: input.rs  output.rs  sanyo.rs  types.rs
src/ir/format/: aeha.rs
src/ir/sanyo/: sanyo.rs  temperature_code_sequences.toml  types.rs
