[package]
name = "mattori-home"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { git = "https://github.com/PsychicNoodles/rppal.git" }
eyre = "0.6"
color-eyre = "0.5"
thiserror = "1"
tokio = { version = "1.10", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
async-stream = "0.3"
lazy_static = "1"
num-traits = "0.2"
itertools = "0.10"
cached = "0.25"
packed_struct = "0.6"
structopt = "0.3"
