[package]
name = "mattori-home-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mattori-home-peripherals = { version = "0.1", path = "../mattori-home-peripherals" }
structopt = "0.3"
tokio = { version = "1.10", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1" }
pretty_env_logger = "0.4"
log = "0.4"
eyre = "0.6"
color-eyre = "0.5"
