[package]
name = "mattori-home-ui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.13", features = ["http", "persistence"] }
serde = { version = "1", features = ["derive"] }

