[package]
name = "mattori-home-ui"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.13", features = ["http", "persistence"] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["time"] }
eyre = "0.6"
color-eyre = "0.5"
log = "0.4"
console_log = "0.2"
tonic = "0.5"
prost = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
tonic-build = "0.5"
